remove youb from seo title

--- a/i18n/locales/de.json
+++ b/i18n/locales/de.json
@@ -124,7 +124,7 @@
     }
   },
   "seo": {
-    "title": "YOUB - Training, das sich an dein Leben anpasst",
+    "title": "Training, das sich an dein Leben anpasst",
     "description": "YOUB ist dein intelligenter KI-Coach für Triathlon, Radsport und Laufen. Wir verbinden Sportwissenschaft mit Echtzeit-Datenanalyse für dein optimales Training."
   },
   "howItWorks": {
